--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "black_and_white",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --watch index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Martin Orellana",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
